<resources>
    <string name="app_name">ShopTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Products</string>
    <string name="menu_gallery">Users</string>
    <string name="menu_buy">Buy</string>
    <string name="menu_user_prod">User Products</string>
    <string name="menu_prod_user">Product Users</string>

    <string name="text_id">ID</string>
    <string name="text_name">Name</string>
    <string name="text_price">Price</string>

    <string name="text_amount">Money</string>

    <string name="text_enter_user">Enter User ID</string>
    <string name="text_enter_prod">Enter Product ID</string>
    <string name="_0">0</string>

    <string name="text_but_find">Find</string>

    <string name="text_empty"> </string>
    <string name="text_no_info">No info yet</string>
</resources>